--- a/Notes/notes.ipynb
+++ b/Notes/notes.ipynb
@@ -28,7 +28,18 @@
     "    return min(int(np.ceil(0.1 * x)), 25)\n",
     "```\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "\n",
+    "Vẽ thêm validation loss cho từng fold như training loss\n",
+    "gộp validation loss curve trên cùng 1 graph\n",
+    "\n",
+    "normalize dataset \n",
+    "\n",
+    "Continuous learning, lifelong learning (literature review), xem các phương pháp giải quyết forgetful learning. \n",
+    "literature review: giải quyết vấn đề forgeting. (thực tế trên vd nào, test trên tập dữ liệu nào, vd thực tế, tại sao cần giải quyết, evaluate như thế nào.)\n",
+    "làm powerpoint()\n",
+    "tìm hiểu bao quát trước -> sâu ()\n"
    ]
   }
  ],
