--- a/Notes/notes.ipynb
+++ b/Notes/notes.ipynb
@@ -39,7 +39,15 @@
     "Continuous learning, lifelong learning (literature review), xem các phương pháp giải quyết forgetful learning. \n",
     "literature review: giải quyết vấn đề forgeting. (thực tế trên vd nào, test trên tập dữ liệu nào, vd thực tế, tại sao cần giải quyết, evaluate như thế nào.)\n",
     "làm powerpoint()\n",
-    "tìm hiểu bao quát trước -> sâu ()\n"
+    "tìm hiểu bao quát trước -> sâu ()\n",
+    "\n",
+    "\n",
+    "\n",
+    "tìm báo theo hướng robotic, công nghiệp, anomaly detection.\n",
+    "implement cho toy example\n",
+    "ứng dụng cho Mnist, Cifar\n",
+    "ssh\n",
+    "slurm"
    ]
   }
  ],
