--- a/Dataprocessing/data-wafer-map.ipynb
+++ b/Dataprocessing/data-wafer-map.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -194,54 +194,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>409846</th>\n",
-       "      <td>1970.0</td>\n",
+       "      <th>603312</th>\n",
+       "      <td>1513.0</td>\n",
        "      <td>[0, 0]</td>\n",
-       "      <td>lot24446</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
-       "      <td>(51, 50)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>671935</th>\n",
-       "      <td>712.0</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>lot41829</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1,...</td>\n",
-       "      <td>(32, 29)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349926</th>\n",
-       "      <td>5532.0</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>lot20887</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
-       "      <td>(60, 119)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384997</th>\n",
-       "      <td>2360.0</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>lot23081</td>\n",
+       "      <td>lot37980</td>\n",
        "      <td>[0, 0]</td>\n",
        "      <td>11.0</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
-       "      <td>(68, 65)</td>\n",
+       "      <td>(49, 39)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>293807</th>\n",
-       "      <td>4096.0</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>lot17991</td>\n",
-       "      <td>[0, 0]</td>\n",
-       "      <td>18.0</td>\n",
+       "      <th>293234</th>\n",
+       "      <td>1683.0</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>lot17964</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>25.0</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
-       "      <td>(72, 72)</td>\n",
+       "      <td>(45, 48)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366816</th>\n",
+       "      <td>803.0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>lot21932</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>(58, 52)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>651259</th>\n",
+       "      <td>776.0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>lot40802</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>(30, 34)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475086</th>\n",
+       "      <td>1513.0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>lot29301</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>(49, 39)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -249,21 +249,21 @@
       ],
       "text/plain": [
        "        dieSize failureType   lotName trainTestLabel  waferIndex  \\\n",
-       "409846   1970.0      [0, 0]  lot24446         [0, 0]        24.0   \n",
-       "671935    712.0      [0, 0]  lot41829         [0, 0]         6.0   \n",
-       "349926   5532.0      [0, 0]  lot20887         [0, 0]         6.0   \n",
-       "384997   2360.0      [0, 0]  lot23081         [0, 0]        11.0   \n",
-       "293807   4096.0      [0, 0]  lot17991         [0, 0]        18.0   \n",
+       "603312   1513.0      [0, 0]  lot37980         [0, 0]        11.0   \n",
+       "293234   1683.0      Center  lot17964       Training        25.0   \n",
+       "366816    803.0      [0, 0]  lot21932         [0, 0]        13.0   \n",
+       "651259    776.0      [0, 0]  lot40802         [0, 0]        20.0   \n",
+       "475086   1513.0      [0, 0]  lot29301         [0, 0]        17.0   \n",
        "\n",
        "                                                 waferMap waferMapDim  \n",
-       "409846  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (51, 50)  \n",
-       "671935  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1,...    (32, 29)  \n",
-       "349926  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...   (60, 119)  \n",
-       "384997  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (68, 65)  \n",
-       "293807  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (72, 72)  "
+       "603312  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (49, 39)  \n",
+       "293234  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (45, 48)  \n",
+       "366816  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (58, 52)  \n",
+       "651259  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (30, 34)  \n",
+       "475086  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...    (49, 39)  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "((300, 202), (6, 21))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,6 +581,15 @@
     "# Print the modified DataFrame (df_modified)\n",
     "print(\"Modified DataFrame (df_modified):\")\n",
     "print(df_modified)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_modified['failureType'].unique()"
    ]
   },
   {
