--- a/ModelTraining/Drive-data-training.ipynb
+++ b/ModelTraining/Drive-data-training.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas\n",
+    "!pip install torch\n",
+    "!pip install scikit-learn\n",
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -31,11 +43,19 @@
      "text": [
       "Using device: cpu\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anhcao/GitHub/DLProject_1/.venv/lib64/python3.11/site-packages/torch/cuda/__init__.py:129: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 11040). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
     }
    ],
    "source": [
     "# Data path where all daily CSV files are stored\n",
-    "data_directory = 'D:/Backblaze_Data/data_Q2_2024/Training-Q1-data/'  # Replace with your data directory path\n",
+    "data_directory = 'D:/Backblaze_Data/data_Q2_2024/Training-Q1-data/' \n",
     "\n",
     "# Number of days before failure to include (excluding the failure day)\n",
     "days_before_failure = 30  # You can change this value\n",
@@ -1121,7 +1141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1135,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
